penambahan transaksi tanpa array
